<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.futurecraftsmen.pms</groupId>
        <artifactId>pms-technical</artifactId>
        <version>3.1.1.300</version>
    </parent>
    <packaging>jar</packaging>
    <artifactId>pms-technical-service</artifactId>
    <dependencies>
        <dependency>
            <groupId>com.futurecraftsmen.pms</groupId>
            <artifactId>pms-service</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>com.futurecraftsmen.pms</groupId>
            <artifactId>pms-enterprise-api</artifactId>
            <version>${project.version}</version>
        </dependency>

        <dependency>
            <groupId>io.vavr</groupId>
            <artifactId>vavr</artifactId>
            <version>0.10.6</version> <!-- 2025年最新稳定版 -->
        </dependency>
        <dependency>
            <groupId>com.futurecraftsmen.pms</groupId>
            <artifactId>pms-technical-api</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>com.futurecraftsmen.pms</groupId>
            <artifactId>pms-dm-api</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>com.futurecraftsmen.pms</groupId>
            <artifactId>pms-dp-api</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>com.futurecraftsmen.pms</groupId>
            <artifactId>pms-right-api</artifactId>
            <version>${project.version}</version>
        </dependency>
        <!-- 测试接口暴漏HTTP端口设置，本地测试 -->
        <!--        <dependency>-->
        <!--            <groupId>com.futurecraftsmen.pms</groupId>-->
        <!--            <artifactId>pms-bff</artifactId>-->
        <!--            <version>${project.version}</version>-->
        <!--        </dependency>-->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>com.rnkrsoft.bopomofo4j</groupId>
            <artifactId>bopomofo4j</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <exclusions>
                <exclusion>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-starter-logging</artifactId>
                </exclusion>
            </exclusions>
            <scope>test</scope>
        </dependency>
        <!-- Spring Expression Language 支持 -->
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-expression</artifactId>
        </dependency>
        <!-- EasyExcel -->
        <dependency>
            <groupId>com.alibaba</groupId>
            <artifactId>easyexcel</artifactId>
        </dependency>

        <dependency>
            <!-- this is needed or IntelliJ gives junit.jar or junit-platform-launcher:1.3.2 not found errors -->
            <groupId>org.junit.platform</groupId>
            <artifactId>junit-platform-launcher</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.futurecraftsmen.pms</groupId>
            <artifactId>pms-pas-api</artifactId>
            <version>3.1.1.300</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <version>${build.plugins.plugin.version}</version>
                <configuration>
                    <mainClass>com.futurecraftsmen.pms.PmsServiceApplication</mainClass>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>repackage</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>